<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.codehowpedia.dialog.DialogActivity" >

    <Button android:id="@+id/alert_dialog" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/click_me"
        android:onClick="getDialog"/>

    <Button android:id="@+id/progress_dialog" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/display_progress_dialog"
        android:onClick="showProgressDialog"/>
    
     <Button android:id="@+id/download_progress_dialog" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/show_download_progress"
        android:onClick="showDownloadProgress"/>
     
     <Button android:id="@string/id_invoke_another_activity" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/invoke_another_activity"
        android:onClick="showAnotherActivity"/>
     
     <Button android:id="@string/showgmail" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/showgmail"
        android:onClick="showGmail"/>
</LinearLayout>
